@@ -29,33 +29,18 @@ exports.InvalidRequestBodyError = InvalidRequestBodyError;
  *   - socket   Unix socket file to listen on (trumps host/port)
  */
 function run(app, opts, callback) {
-    opts = opts || {};
-
     if (typeof opts == "function") {
         callback = opts;
         opts = null;
     }
 
+    opts = opts || {};
+
     var server = createServer(app, opts);
 
-    server.on("listening", function () {
-        console.log(">> Strata web server version " + exports.version.join("."));
-
-        var addr = server.address(),
-            msg = "Listening on " + addr.address;
-
-        if (!opts.socket) {
-            msg += ":" + addr.port;
-        }
-
-        msg += ", CTRL+C to stop";
-
-        console.log(">> " + msg);
-
-        if (typeof callback == "function") {
-            callback();
-        }
-    });
+    if (typeof callback == "function") {
+        server.on("listening", callback);
+    }
 
     if (opts.socket) {
         server.listen(opts.socket);
@@ -74,6 +59,8 @@ function run(app, opts, callback) {
  *   - key      Private key to use for SSL (HTTPS only)
  *   - cert     Public X509 certificate to use (HTTPS only)
  *   - name     The name of the server
+ *   - quiet    Set true to prevent the server from writing a startup message
+ *              to the console after it starts
  *
  * The `app` should be a valid Strata app (see the SPEC), or an object that has
  * a `toApp` function that returns one (e.g. a strata.Builder).
@@ -102,8 +89,24 @@ function createServer(app, opts) {
     var serverName, serverPort;
     server.on("listening", function () {
         var addr = server.address();
+
         serverName = opts.name || process.env.SERVER_NAME || addr.address;
         serverPort = (addr.port || "").toString();
+
+        if (opts.quiet) {
+            return;
+        }
+
+        var msg = ">> Strata web server version " + exports.version.join(".") + "\n";
+        msg += ">> Listening on " + addr.address;
+
+        if (addr.port) {
+            msg += ":" + addr.port;
+        }
+
+        msg += ", CTRL+C to stop";
+
+        console.log(msg);
     });
 
     server.on("request", function handleRequest(req, res) {
